kubernetes/environment/rtcms4j/strip-core-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-core-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /core
    forceSlash: false
