kubernetes/environment/rtcms4j/strip-notify-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-notify-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /notify
    forceSlash: false
