kubernetes/environment/rtcms4j/rtcms4j-core-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rtcms4j-core-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rtcms4j-api.enzhine.ru`) && PathPrefix(`/core`)
      middlewares:
        - name: strip-core-prefix
        - name: cors-headers
      services:
        - kind: Service
          name: rtcms4j-core
          namespace: default
          port: 80
          scheme: http
  tls:
    secretName: wildcard-enzhine-ru-tls
